# Snake-Game

./: .gitignore  CMakeLists.txt  Game.h  README.md  food.h  main.cpp  readme.md  snake.h
include/: Board.h  Food.h  Game.h  Snake.h
src/: Board.cpp  Food.cpp  Game.cpp  Snake.cpp  food.cpp  main.cpp  snake.cpp
